test/libsolidity/syntaxTests/types/bytes256.sol
contract C {
  bytes256 b256 = 1;
}
// ----
// DeclarationError: (15-23): Identifier not found or not unique.
